force-app/main/default/objects/Security_Audit__c/Security_Audit__c.object-meta.xml
<CustomObject>
    <label>Security Audit</label>
    <nameField>
        <label>Security Audit Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Security Audits</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>