force-app/main/default/objects/Security_Audit__c/fields/Bank_Account__c.field-meta.xml
<CustomField>
    <fullName>Bank_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Bank Account</label>
    <referenceTo>RS_Bank_Account__c</referenceTo>
    <relationshipLabel>Security Audits</relationshipLabel>
    <relationshipName>Security_Audits</relationshipName>
    <type>Lookup</type>
</CustomField>