force-app/main/default/objects/Security_Audit__c/fields/Event_Type__c.field-meta.xml
<CustomField>
    <fullName>Event_Type__c</fullName>
    <label>Event Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>OTP Generated</fullName>
            </value>
            <value>
                <fullName>OTP Verified</fullName>
            </value>
            <value>
                <fullName>OTP Failed</fullName>
            </value>
            <value>
                <fullName>Login Success</fullName>
            </value>
            <value>
                <fullName>Login Failed</fullName>
            </value>
            <value>
                <fullName>Data Access</fullName>
            </value>
            <value>
                <fullName>Account Update</fullName>
            </value>
            <value>
                <fullName>TRANSFER</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>