force-app/main/default/objects/Security_Audit__c/fields/IP_Address__c.field-meta.xml
<CustomField>
    <fullName>IP_Address__c</fullName>
    <label>IP Address</label>
    <length>45</length>
    <type>Text</type>
</CustomField>