force-app/main/default/objects/Security_Audit__c/fields/Timestamp__c.field-meta.xml
<CustomField>
    <fullName>Timestamp__c</fullName>
    <defaultValue>NOW()</defaultValue>
    <label>Timestamp</label>
    <type>DateTime</type>
</CustomField>